workspace/compiler/tests/snapshots/test_snap_java__java_render_classes_w80.snap
---
source: workspace/compiler/tests/snap_java.rs
expression: rendered
---
// <unrendered module>

// ---

/**
 * An abstract base class representing an animal.
 * 
 * All animals have a name and can make a sound.
 */
public class Animal {
    private String name;
    protected int age;
}

// ---

/**
 * Returns a human-readable description.
 */
public String describe(boolean verbose);

// ---

/**
 * Returns this animal's age.
 */
public int getAge();

// ---

/**
 * Returns this animal's name.
 */
public String getName();

// ---

/**
 * Returns the sound this animal makes.
 * 
 * Declared: `abstract`
 */
public String sound();

// ---

/**
 * A concrete dog, extending `Animal`.
 */
public class Dog {
    private String breed;
    boolean trained;
}

// ---

/**
 * Private implementation detail.
 */
private void bark(int times);

// ---

/**
 * Returns the breed.
 */
public String getBreed();

// ---

/**
 * A package-private helper.
 */
void internalReset();

// ---

/**
 * Teaches the dog a trick.
 * 
 * Throws (undeclared):
 * - `java.lang.IllegalArgumentException` — if the trick name is blank
 */
public void learnTrick(String trick);

// ---

/**
 * Annotations: `@java.lang.Override`
 */
public String sound();
