workspace/compiler/tests/snapshots/test_snap_java__java_render_collections_w100.snap
---
source: workspace/compiler/tests/snap_java.rs
expression: rendered
---
// <unrendered module>

// ---

/**
 * A generic in-memory registry mapping string keys to typed values.
 * 
 * Exercises the collection-type mappings: `List<T>`, `Map<K,V>`,
 *  `Set<T>`, and `Optional<T>`.
 * 
 * Type parameters:
 * - `V` — the value type stored in this registry
 */
public class Registry<V> {
    private Map<String, V> store;
    private Map<String, Set<String>> tags;
}

// ---

/**
 * Returns all registered values as a list.
 */
public List<V> allValues();

// ---

/**
 * Returns all keys in the registry.
 */
public Set<String> keys();

// ---

/**
 * Returns the value for `key`, or empty if absent.
 */
public Optional<V> lookup(String key);

// ---

/**
 * Registers a value under the given key.
 */
public void register(String key, V value);

// ---

/**
 * Applies multiple registrations at once.
 */
public void registerAll(Map<String, V> entries);

// ---

/**
 * Returns the full tag-to-value mapping for `key`.
 */
public Map<String, String> tagsFor(String key);
