workspace/compiler/tests/snapshots/test_snap_java__java_render_deprecated_w80.snap
---
source: workspace/compiler/tests/snap_java.rs
assertion_line: 457
expression: rendered
---
// <unrendered module>

// ---

/**
 * A class with deprecated members, to exercise `@Deprecated` lowering.
 * 
 * Deprecated: Use `ModernApi` instead.
 * 
 * Annotations: `@java.lang.Deprecated`
 */
@Deprecated // Use `ModernApi` instead.
public class LegacyApi {
    public int oLDMAX;
}

// ---

/**
 * The replacement method (not deprecated).
 */
public String newProcess(String input);

// ---

/**
 * A deprecated method.
 * 
 * Deprecated: Use `newProcess(String)` instead.
 * 
 * Annotations: `@java.lang.Deprecated`
 */
@Deprecated // Use `newProcess(String)` instead.
public String oldProcess(String input);
