workspace/compiler/tests/snapshots/test_snap_java__java_render_enums_w80.snap
---
source: workspace/compiler/tests/snap_java.rs
expression: rendered
---
// <unrendered module>

// ---

/**
 * Cardinal compass directions.
 */
public sealed interface Direction permits NORTH, SOUTH, EAST, WEST {}
record NORTH() implements Direction {}
record SOUTH() implements Direction {}
record EAST() implements Direction {}
record WEST() implements Direction {}

// ---

/**
 * Returns the opposite direction.
 */
public Direction opposite();

// ---

/**
 * Declared: `static`
 */
public Direction valueOf(String name);

// ---

/**
 * Declared: `static`
 */
public Direction[] values();

// ---

/**
 * Lifecycle status for an entity.
 */
public sealed interface Status permits PENDING, ACTIVE, INACTIVE, DELETED {}
record PENDING() implements Status {}
record ACTIVE() implements Status {}
record INACTIVE() implements Status {}
record DELETED() implements Status {}

// ---

/**
 * Returns `true` if this status is terminal (cannot advance).
 */
public boolean isTerminal();

// ---

/**
 * Declared: `static`
 */
public Status valueOf(String name);

// ---

/**
 * Declared: `static`
 */
public Status[] values();
