workspace/compiler/tests/snapshots/test_snap_java__java_render_sealed_w80.snap
---
source: workspace/compiler/tests/snap_java.rs
assertion_line: 404
expression: rendered
---
// <unrendered module>

// ---

/**
 * A sealed hierarchy of geometric shapes.
 * 
 * Only the listed subtypes are permitted.
 */
public interface Shape {
    double area();
    double perimeter();
}

// ---

/**
 * A circle defined by its radius.
 * 
 * Declared: `static final record`
 */
public class Circle {
    public double radius;
}

// ---

public double area();

// ---

/**
 * Declared: `final`
 */
public boolean equals(Object o);

// ---

/**
 * Declared: `final`
 */
public int hashCode();

// ---

public double perimeter();

// ---

public double radius();

// ---

/**
 * Declared: `final`
 */
public String toString();

// ---

/**
 * An axis-aligned rectangle.
 * 
 * Declared: `static final record`
 */
public class Rectangle {
    public double width;
    public double height;
}

// ---

public double area();

// ---

/**
 * Declared: `final`
 */
public boolean equals(Object o);

// ---

/**
 * Declared: `final`
 */
public int hashCode();

// ---

public double height();

// ---

public double perimeter();

// ---

/**
 * Declared: `final`
 */
public String toString();

// ---

public double width();

// ---

/**
 * A triangle defined by three side lengths (validated by the triangle inequality).
 * 
 * Declared: `static final record`
 */
public class Triangle {
    public double a;
    public double b;
    public double c;
}

// ---

public double a();

// ---

public double area();

// ---

public double b();

// ---

public double c();

// ---

/**
 * Declared: `final`
 */
public boolean equals(Object o);

// ---

/**
 * Declared: `final`
 */
public int hashCode();

// ---

public double perimeter();

// ---

/**
 * Declared: `final`
 */
public String toString();

// ---

/**
 * Returns the area of this shape.
 * 
 * Declared: `abstract`
 */
public double area();

// ---

/**
 * Returns the perimeter of this shape.
 * 
 * Declared: `abstract`
 */
public double perimeter();
